--- a/src/app/comps/customer-list/customer-list.component.css
+++ b/src/app/comps/customer-list/customer-list.component.css
@@ -27,11 +27,7 @@ table i{
 
     @media screen and (max-width: 992px){
       table tbody tr i{
-        display: none;
-        transition: .3s all ease-in;
-      }
-      table tbody tr i:active{
-        display: block;
+        /* display: none; */
         transition: .3s all ease-in;
       }
       table {
